a working example of locales using query

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -1,4 +1,5 @@
 {
   "Hello World": "مرحباً يا عالم",
-  "Hello": "مرحباً"
+  "Hello": "مرحباً",
+  "No Email Required": "ليس هنالك داعِ للإيميل"
 }
