--- a/locales/en.json
+++ b/locales/en.json
@@ -1,4 +1,5 @@
 {
-  "Hello World": "Hello World",
-  "Hello": "Hello"
+	"Hello World": "Hello World",
+	"Hello": "Hello",
+	"No Email Required": "No Email Required 2"
 }
